@@ -1,3 +1,9 @@
+2012-07-01  David Gilbert <david.gilbert@object-refinery.com>
+
+    Bug 3521736 (optimisation)
+    * org/jfree/chart/renderer/xy/DeviationRenderer.java
+    (drawItem): Provide initial capacity for GeneralPath.
+
 2012-06-11  David Gilbert <david.gilbert@object-refinery.com>
 
     Patch 3204823 by DaveLaw
